# TaskManager

./: CMakeLists.txt  qml.qrc
components/: CustomButton.qml  CustomProgressBar.qml  qmldir
demonstration/: .gitignore  qml.qrc
demonstration/components/: CustomButton.qml  CustomProgressBar.qml
demonstration/include/: task_manager.h
demonstration/qml/: main.qml
demonstration/src/: task_manager.cpp
demonstration/theme/: TaskTheme.qml
include/: task_manager.h
qml/: main.qml
src/: main.cpp  task_manager.cpp
theme/: TaskTheme.qml  qmldir
